day2/capabilities/kustomize/bases/acm-policies-openshift-gitops/policy-manifests/tenant-management/validate-tenant-applications/K8sRequiredManifestSubset_tenant-apps-healthy-and-synced.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredManifestSubset
metadata:
  name: tenant-apps-healthy-and-synced
spec:
  match:
    kinds:
    - apiGroups:
      - argoproj.io
      kinds:
      - Application
    excludedNamespaces:
    - openshift-gitops
  parameters:
    manifest_subset:
      status:
        health:
          status: Healthy
        sync:
          status: Synced
